welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: Missing closing brace `}' assumed here
while (getX()!=14 && getY()!=0){
^